Still trying to fix this...

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "url": "git+https://github.com/Relten98/Burger_logger.git"
   },
   "author": "Ty Diezhandino",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Relten98/Burger_logger/issues"
   },
