--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "burger_logger",
+  "name": "eat-da-burger",
   "version": "1.0.0",
-  "description": "Logs those delicious borgers",
+  "description": "A restaurant app that lets users input the names of burgers they'd like to eat",
   "main": "server.js",
-  "dependencies": {
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-handlebars": "^5.2.1",
-    "mysql": "^2.18.1",
-    "mysql2": "^2.2.5"
-  },
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Relten98/Burger_logger.git"
+    "url": "git+https://github.com/xmkchen/burger.git"
   },
-  "author": "Ty Diezhandino",
+  "keywords": [
+    "burgers",
+    "food",
+    "nom"
+  ],
+  "author": "kathy chen",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Relten98/Burger_logger/issues"
+    "url": "https://github.com/xmkchen/burger/issues"
   },
-  "homepage": "https://github.com/Relten98/Burger_logger#readme"
+  "homepage": "https://github.com/xmkchen/burger#readme",
+  "dependencies": {
+    "express": "^4.16.4",
+    "express-handlebars": "^3.0.2",
+    "mysql": "^2.17.1"
+  }
 }
