--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   },
   "author": "Ty Diezhandino",
   "license": "MIT",
+  "production": {
+    "use_env_variable": "JAWSDB_URL",
+    "dialect": "mysql"
+  },
   "dependencies": {
     "express": "^4.16.4",
     "express-handlebars": "^3.1.0",
